<resources>
    <string name="app_name" translatable="false">TechOWare</string>
    <string name="back_button">Back</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_email">Enter Your email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="don_t_have_an_account">Don’t have an account? Register Now</string>
    <string name="login_with_google">Login With Google</string>
    <string name="or_login_with">Or Login with</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="incorrect_email_or_password">Incorrect Email or Password</string>
    <string name="previous_page">Previous Page</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="dummy">TextView</string>
    <string name="user_details_title">User Details</string>
    <string name="full_name">Full Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="health_conditions_if_any">Health conditions(if any)</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="age">Age</string>
    <string name="slider">slider</string>
    <string name="hospital">Hospital</string>
    <string name="call_for_help">Call For Help</string>
    <string name="location">Location</string>
    <string name="check_pulse">Check Pulse</string>
    <string name="save">Save</string>
    <string name="text_advice_for_image">Note* - For proper SOS service we advice you to use a clear image of yourself, with a proper disclosure of your front profile.</string>
    <string name="select_a_picture">Select A Picture</string>
    <string name="emergency_message">Emergency Message</string>
    <string name="title_activity_location">Location</string>
</resources>