<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:paddingVertical="@dimen/page_pad_vertical"
    android:paddingHorizontal="@dimen/page_pad_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_height="50sp"
        android:layout_width="50sp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        tools:layout_editor_absoluteX="20dp" />


<TextView
    android:id="@+id/incorrect_fields"
    android:text="@string/incorrect_email_or_password"
    android:visibility="invisible"
    android:textColor="#F02121"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15sp"
    app:layout_constraintTop_toBottomOf="@id/password_input"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/enter_your_email"
        android:autofillHints="username"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="100dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/email_input"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#595454"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#12C6CB"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/or_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textColor="#808080"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text"
        />
    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="#12C6CB"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/google_login"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/login_with_google"
        android:src="@drawable/google_icon"
        app:layout_constraintTop_toBottomOf="@+id/or_login_with"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>