<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:paddingHorizontal="20dp"
    android:paddingVertical="40dp">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/previous_page"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/SignUp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/work_sans_bold"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_corners"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="80dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:backgroundTint="#12C6CB"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/orloginwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/google_login"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/login_with_google"
        android:padding="8dp"
        android:src="@drawable/google_icon"
        app:layout_constraintTop_toBottomOf="@+id/orloginwith"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/exception_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F02121"
        android:text="@string/dummy"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>