<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userDetails"
    android:paddingVertical="40dp"
    android:paddingHorizontal="20dp">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/previous_page"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/user_details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_details_title"
        android:fontFamily="@font/work_sans_bold"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@drawable/rounded_corners"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/user_details_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:hint="@string/age"
        android:inputType="number"
        android:autofillHints="age"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/blood_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:hint="@string/blood_group"
        android:inputType="text"
        android:autofillHints="BloodGroup"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/gender"
        android:inputType="text"
        android:autofillHints="Gender"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/blood_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/health_conditions"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/rounded_corners"
        android:hint="@string/health_conditions_if_any"
        android:inputType="text"
        android:autofillHints="Health Conditions"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/family_contact"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/rounded_corners"
        android:hint="Contact Number Of a Family Member"
        android:inputType="text"
        android:autofillHints="Health Conditions"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/health_conditions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:backgroundTint="#12C6CB"
        android:padding="12dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/exception_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F02121"
        android:text="@string/dummy"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/family_contact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>