<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageTaking">

    <ImageView
        android:id="@+id/back_button"
        android:layout_height="50sp"
        android:layout_width="50sp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_pic_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/work_sans_bold"
        android:text="@string/select_a_picture"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_advice_for_image"
        app:layout_constraintTop_toBottomOf="@id/profile_pic_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/select_image"
        app:civ_border_width="1dp"
        app:civ_border_color="#000000"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/user_coloured"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="@dimen/_100dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#12C6CB"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_image"/>

</androidx.constraintlayout.widget.ConstraintLayout>